; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.hist.c_heq.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.hist.c_heq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wordent = type { %struct.wordent*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wordent*, %struct.wordent*)* @heq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @heq(%struct.wordent* %0, %struct.wordent* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.wordent*, align 8
  %5 = alloca %struct.wordent*, align 8
  %6 = alloca %struct.wordent*, align 8
  %7 = alloca %struct.wordent*, align 8
  store %struct.wordent* %0, %struct.wordent** %4, align 8
  store %struct.wordent* %1, %struct.wordent** %5, align 8
  %8 = load %struct.wordent*, %struct.wordent** %4, align 8
  %9 = getelementptr inbounds %struct.wordent, %struct.wordent* %8, i32 0, i32 0
  %10 = load %struct.wordent*, %struct.wordent** %9, align 8
  store %struct.wordent* %10, %struct.wordent** %6, align 8
  %11 = load %struct.wordent*, %struct.wordent** %5, align 8
  %12 = getelementptr inbounds %struct.wordent, %struct.wordent* %11, i32 0, i32 0
  %13 = load %struct.wordent*, %struct.wordent** %12, align 8
  store %struct.wordent* %13, %struct.wordent** %7, align 8
  br label %14

14:                                               ; preds = %45, %2
  %15 = load %struct.wordent*, %struct.wordent** %6, align 8
  %16 = getelementptr inbounds %struct.wordent, %struct.wordent* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.wordent*, %struct.wordent** %7, align 8
  %19 = getelementptr inbounds %struct.wordent, %struct.wordent* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = call i64 @Strcmp(i32 %17, i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %46

24:                                               ; preds = %14
  %25 = load %struct.wordent*, %struct.wordent** %6, align 8
  %26 = getelementptr inbounds %struct.wordent, %struct.wordent* %25, i32 0, i32 0
  %27 = load %struct.wordent*, %struct.wordent** %26, align 8
  store %struct.wordent* %27, %struct.wordent** %6, align 8
  %28 = load %struct.wordent*, %struct.wordent** %7, align 8
  %29 = getelementptr inbounds %struct.wordent, %struct.wordent* %28, i32 0, i32 0
  %30 = load %struct.wordent*, %struct.wordent** %29, align 8
  store %struct.wordent* %30, %struct.wordent** %7, align 8
  %31 = load %struct.wordent*, %struct.wordent** %6, align 8
  %32 = load %struct.wordent*, %struct.wordent** %4, align 8
  %33 = icmp eq %struct.wordent* %31, %32
  br i1 %33, label %34, label %40

34:                                               ; preds = %24
  %35 = load %struct.wordent*, %struct.wordent** %7, align 8
  %36 = load %struct.wordent*, %struct.wordent** %5, align 8
  %37 = icmp eq %struct.wordent* %35, %36
  %38 = zext i1 %37 to i64
  %39 = select i1 %37, i32 1, i32 0
  store i32 %39, i32* %3, align 4
  br label %46

40:                                               ; preds = %24
  %41 = load %struct.wordent*, %struct.wordent** %7, align 8
  %42 = load %struct.wordent*, %struct.wordent** %5, align 8
  %43 = icmp eq %struct.wordent* %41, %42
  br i1 %43, label %44, label %45

44:                                               ; preds = %40
  store i32 0, i32* %3, align 4
  br label %46

45:                                               ; preds = %40
  br label %14

46:                                               ; preds = %44, %34, %23
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local i64 @Strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
